:lipstick: [design] navbar logo for safari/ios, main page horizontal scroll fix

--- a/review-summary/src/pages/Home.scss
+++ b/review-summary/src/pages/Home.scss
@@ -1,4 +1,5 @@
 .home {
+
     .mainTopContainer {
         display: flex;
         flex-direction: column;
@@ -16,35 +17,40 @@
         }
     }
 
-
-    .shareContainer {
-        background: #3B3C41;
-        padding: 40px 0px;
-        display: flex;
-        flex-direction: column;
-        gap: 24px;
-        width: 100vw;
-
-        .shareTitle {
-            line-height: 26px;
-            font-size: 18px;
-        }
-
-        .shareButton {
-            img {
-                width: 64px;
-                height: 64px;
-            }
-
-            .caption {
-                font-size: 14px;
-                font-weight: 400;
-                color: white;
-                text-align: center;
-                margin-top: 8px;
-            }
-        }
-    }
+		.mainBottom {
+			margin: 0;
+			width: 460px;
+			
+			.shareContainer {
+					background: #3B3C41;
+					padding: 40px 0px;
+					display: flex;
+					margin: 0px;
+					flex-direction: column;
+					gap: 24px;
+					width: 460px;
+	
+					.shareTitle {
+							line-height: 26px;
+							font-size: 18px;
+					}
+	
+					.shareButton {
+							img {
+									width: 64px;
+									height: 64px;
+							}
+	
+							.caption {
+									font-size: 14px;
+									font-weight: 400;
+									color: white;
+									text-align: center;
+									margin-top: 8px;
+							}
+					}
+			}
+		}
 
     .mainFooter {
         background: #121212;
@@ -54,9 +60,9 @@
         justify-content: flex-start;
         align-items: flex-start;
         gap: 8px;
-        width: 100vw;
+        width: 460px;
 
-        height: 200px;
+        height: 100px;
 
         .footerTitle{
             font-size: 14px;
